# Django_Complier

./: .gitignore  ARCHITECTURE.md  DEMO.md  README.md  prompt and plan  pyproject.toml
docs/: BUILD_LOG.md  PHASE_SUMMARY.md
examples/: demo_shop.api  diff_test.api  error.api  product.api  relationships.api
src/apiforge/: __init__.py
src/apiforge/cli/: main.py
src/apiforge/compiler/: __init__.py  ast.py  codegen.py  diff.py  lexer.py  parser.py  semantic.py  snapshot.py  watcher.py
tests/: test_cli.py  test_codegen.py  test_compiler_frontend.py  test_diff.py  test_evolution.py  test_parser.py  test_planner.py  test_relationships.py  test_semantic.py  test_snapshot.py  test_watcher.py
