[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apiforge"
version = "0.1.0"
description = "An incremental API schema compiler and evolution engine for Django backends."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Vaishnavi Rai"},
]
keywords = ["compiler", "api", "django", "schema", "dsl"]
dependencies = [
    "click>=8.1.0",
    "django>=4.2",
    "djangorestframework>=3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
apiforge = "apiforge.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.package-dir]
"" = "src"
